add meta title, description, and social sharing tags
add meta title, description, and social sharing tags

--- a/index.html
+++ b/index.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <!-- Title (what shows in Google search results & browser tab) -->
+    <!-- Title  -->
     <title>Jason Black | Republican for State Senate</title>
 
-    <!-- Meta Description (short summary shown under the title in Google) -->
+    <!-- Meta Description  -->
     <meta name="description" content="Official campaign site for Jason Black, Republican candidate for State Senate. Learn about Jason's vision, values, and how you can support his campaign.">
 
-    <!-- Keywords (not as important anymore, but fine to include) -->
+    <!-- Keywords  -->
     <meta name="keywords" content="Jason Black, State Senate, Republican, campaign, vote, donate, Georgia politics">
 
-    <!-- Open Graph (for Facebook, LinkedIn, etc.) -->
+    <!-- Open Graph  -->
     <meta property="og:title" content="Jason Black | Republican for State Senate">
     <meta property="og:description" content="Join Jason Black's campaign for a stronger community. Get involved, donate, and stay updated.">
     <meta property="og:image" content="https://yourdomain.com/images/jason-banner.png">
