Update images folder
Update images folder instead of media

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         </li>
                     </ul>
                 </nav>
-                <a href="" class="logo"><img src="./Media/logo.svg"></a>
+                <a href="" class="logo"><img src="./images/logo.svg"></a>
                 <nav class="nav-right">
                     <ul class="nav-menu">
                         <li class="nav-menu-item">
@@ -107,7 +107,7 @@
                         <h2 class="json-banner-right-title"><span>Present.</span><span>Proven.</span><span>Ready.</span></h2>
                     </div>
                     <div class="json-banner-img">
-                        <img src="./Media/jason-banner.png">
+                        <img src="./images/jason-banner.png">
                     </div>
                 </div>
             </div>
@@ -117,7 +117,7 @@
                 <div class="why-josn-row">
                     <div class="why-json-left">
                     <div class="why-json-image">
-                        <img src="./Media/why-jason.png">
+                        <img src="./images/why-jason.png">
                     </div>
                     <div class="why-json-quote">
                         <span class="why-json-quote-icon">
@@ -140,7 +140,7 @@
         </section>
         <section class="image-section">
             <div class="full-image">
-                <img src="./Media/after-about.png">
+                <img src="./images/after-about.png">
             </div>
         </section>
         <section class="three-col-iconbox">
@@ -209,7 +209,7 @@
                          
                     </div>
                     <div class="the-foundation-json-img">
-                        <img src="./Media/jason-foundation.png">
+                        <img src="./images/jason-foundation.png">
                     </div>
                 </div>
             </div>
@@ -273,7 +273,7 @@
         <div class="container">
             <div class="footer-row">
                 <div class="footer-logo">
-                <a href=""><img src="./Media/logo.svg"></a>
+                <a href=""><img src="./images/logo.svg"></a>
             </div>
             <div class="facebook-link">
                 <a href="https://www.facebook.com/votejasonblackIt" target="_blank">
