--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <nav class="nav-right">
                     <ul class="nav-menu">
                         <li class="nav-menu-item">
-                            <a href="https://secure.anedot.com/votejasonblack/donate" target="_blank">Donate</a>
+                            <a href="#donate" target="_blank">Donate</a>
                         </li>
                         <li class="nav-menu-item">
                             <a href="#contact">Contact</a>
