updated OG Image
updated OG Image

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <!-- Open Graph  -->
     <meta property="og:title" content="Jason Black | Republican for State Senate">
     <meta property="og:description" content="Join Jason Black's campaign for a stronger community. Get involved, donate, and stay updated.">
-    <meta property="og:image" content="https://yourdomain.com/images/jason-banner.png">
-    <meta property="og:url" content="https://yourdomain.com/">
+    <meta property="og:image" content="https://votejasonblack.org/images/jason-black-logo.png">
+    <meta property="og:url" content="https://votejasonblack.org/">
     <meta property="og:type" content="website">
 
     <!-- Twitter Card -->
