updated OG Image

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Jason Black | Republican for State Senate">
     <meta name="twitter:description" content="Support Jason Black for State Senate. Proven, present, ready to serve.">
-    <meta name="twitter:image" content="https://yourdomain.com/images/jason-banner.png">
+    <meta name="twitter:image" content="https://votejasonblack.org/images/jason-black-logo.png">
 
     <!-- Fonts & Styles -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
