--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         
         <section class="image-section">
             <div class="full-image">
-                <img src="./images/after-about.jpg">
+                <img src="./images/after-about.jpg?v=1" alt="WJIR">
             </div>
 
             <div class="content">
