--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                 <div class="why-josn-row">
                     <div class="why-json-left">
                     <div class="why-json-image">
-                        <img src="./images/why-jason.png">
+                        <img src="./images/Family 2025.jpg">
                     </div>
                     <div class="why-json-quote">
                         <span class="why-json-quote-icon">
